--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>TipTube</title>
 </head>
 <body>
-    <div>
+    <section id="title">
+      <div>
         <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">TipTube</a>
@@ -31,5 +32,6 @@
             </div>
           </nav>
     </div>
+    </section>
 </body>
 </html>
