--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="#">Link</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Disabled</a>
+                <a class="nav-link" href="#">Disabled</a>
               </li>
             </ul>
           </div>
