--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a class="navbar-brand" href="#">Hidden brand</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Feature</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">lolaBunny</a>
+                <a class="nav-link" href="#">Pricing</a>
               </li>
             </ul>
           </div>
