--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+            <a class="navbar-brand" href="#">TipTube</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Feature</a>
@@ -31,6 +31,10 @@
           </div>
         </div>
       </nav>
+      <div>
+        <h1>TipTube</h1>
+        <p>Learn new things in a click!</p>
+      </div>
     </section>
 </body>
 </html>
